<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/navigation_menu_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/courses_icon"
            android:title="@string/navigation_menu_dashboard" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/courses_icon"
            android:title="@string/navigation_menu_courses" />
    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/navigation_menu_profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/navigation_menu_logout" />
                <item
                    android:id="@+id/nav_unsubscribe"
                    android:icon="@drawable/icons8_unsubscribe_48"
                    android:title="@string/navigation_menu_unsubscribe" />
                <item
                    android:id="@+id/nav_synchronisation"
                    android:icon="@drawable/icons8_synchronisation_48"
                    android:title="@string/navigation_menu_synchronisation" />

            </group>
        </menu>
    </item>

    <item android:title="@string/navigation_menu_communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="Share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="Rate Us" />
        </menu>
    </item>
</menu>