<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StudentRegisterActivity"
android:orientation="vertical"
android:background="#fff"
android:fitsSystemWindows="true"
tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="0dp">

        <TextView
            android:id="@+id/register_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:text="@string/login_singup"
            android:textSize="22sp"
            android:transitionName="logo_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/register_image"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/slogan_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_curvee2"
                android:text="@string/student_add_title"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="24dp"
                android:textColor="#FFF"
                android:justificationMode="inter_word"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="0dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/msg_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#F81111"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/student_sex"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        />
                    <RadioGroup
                        android:id="@+id/radioGroupStudentSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/boy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_sex_boy"
                            android:layout_marginLeft="3dp"/>

                        <RadioButton
                            android:id="@+id/GIRL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_sex_girl"
                            android:layout_marginLeft="3dp"/>

                    </RadioGroup>
                </LinearLayout>
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstname"
                        android:layout_width="165dp"
                        android:layout_height="match_parent"
                        android:hint="@string/register_firstname">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/user_icon_16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastname"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_lastname"
                        android:layout_toRightOf="@id/firstname" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/user_icon_16"
                            android:layout_marginBottom="10dp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_level"
                    android:textColor="#000"
                    android:textSize="16dp"/>

                <Spinner
                    android:id="@+id/student_level_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email"
                    android:id="@+id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icons8_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_username"
                    android:hint="@string/login_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icons_username" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password"
                    android:hint="@string/login_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/password_icon"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#1171ba"
                    android:text="@string/register_go"
                    android:textColor="#fff"
                    android:transitionName="trans_btn_signup" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>

