<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ProfileUpdateActivity"
android:orientation="vertical"
android:background="#fff"
android:padding="0dp"
android:fitsSystemWindows="true"
tools:openDrawer="start">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:paddingBottom="0dp">


                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerCrop"

                    android:src="@drawable/nav_menu_header_bg"
                    app:srcCompat="@drawable/progre" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:src="@drawable/man"
                    android:clickable="true"
                    app:civ_border_width="3dp"
                    app:civ_border_color="#FFFFFFFF"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_below="@+id/header_cover_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-130dp"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>






    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_below="@+id/profile_layout">

            <TextView
                android:id="@+id/msg_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#F81111"
                android:textSize="14sp"
                android:layout_gravity="center"/>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstnameTextLayout"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:hint="@string/register_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:drawableLeft="@drawable/user_icon_16" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastnameTextLayout"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_lastname"
                    android:layout_toRightOf="@id/firstnameTextLayout" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user_icon_16"
                        android:layout_marginLeft="20dp"/>

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/icons8_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_tel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/icons8_phone_32" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/villeTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_ville"
                android:layout_marginLeft="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons_positionn" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:layout_marginLeft="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_marginLeft="20dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_icon"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#1171ba"
                android:text="@string/confirm"
                android:textColor="#fff"
                android:transitionName="trans_btn_signup"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>

